classDiagram
    namespace Scripts_Data_Entities {
        class Artist {
            +int Id
            +string Name
            +List~Album~ Albums
            +List~Track~ Tracks
        }
        class Album {
            +int Id
            +int? ArtistId
            +string Title
            +DateTime? ReleaseDate
            +Artist Artist
            +List~Track~ Tracks
        }
        class Track {
            +int Id
            +int? AlbumId
            +int? ArtistId
            +int? WorkId
            +int? MovementId
            +string Title
            +int DurationSeconds
            +Artist Artist
            +Album Album
            +MusicWork MusicWork
            +Movement Movement
        }
        class MusicWork {
            +int Id
            +string Title
            +string Composer
            +JsonDocument Metadata
            +List~Track~ Tracks
            +List~Movement~ Movements
        }
        class Movement {
            +int Id
            +int WorkId
            +string Title
            +int Position
            +MusicWork MusicWork
            +List~Track~ Tracks
        }
        class Scrobble {
            +int Id
            +int TrackId
            +DateTimeOffset ScrobbledAt
            +string Platform
            +Track Track
        }
    }

    namespace Scripts_Services_Music {
        class WorkService {
            -IDbContextFactory~ScriptsDbContext~ _contextFactory
            +Task~int~ GetOrCreateWorkAsync(string title, string? composer, CancellationToken ct)
        }
        class PurgeService {
            -IDbContextFactory~ScriptsDbContext~ _contextFactory
            +Task~PurgeResult~ PurgeOrphansAsync(CancellationToken ct)
        }
    }

    namespace Scripts_Services_Sync {
        class LastFmService {
            +Task~List~LastFmScrobble~~ LoadScrobblesAsync()
            +Task FetchScrobblesSinceAsync(DateTime? fetchAfter, FetchState state, Action callback, CancellationToken ct)
        }
    }

    namespace Scripts_Data_Repositories {
        class ArtistRepository {
            +Task~Artist~ GetByNameAsync(string name, CancellationToken ct)
            +Task~Artist~ AddAsync(Artist artist, CancellationToken ct)
        }
        class AlbumRepository {
            +Task~Album~ GetByArtistAndTitleAsync(int artistId, string title, CancellationToken ct)
            +Task~Album~ AddAsync(Album album, CancellationToken ct)
        }
        class TrackRepository {
            +Task~Track~ GetByArtistAndTitleAsync(int artistId, string title, CancellationToken ct)
            +Task BulkInsertAsync(List~Track~ tracks, CancellationToken ct)
        }
        class ScrobbleRepository {
            +Task UpsertAsync(List~Scrobble~ scrobbles, CancellationToken ct)
        }
    }

    namespace Scripts_Orchestrators {
        class ScrobbleSyncOrchestrator {
            -LastFmService LastFmService
            -WorkService WorkService
            -PurgeService PurgeService
            -TrackRepository TrackRepository
            -ArtistRepository ArtistRepository
            -AlbumRepository AlbumRepository
            -ScrobbleRepository ScrobbleRepository
            +Task ExecuteAsync()
            -Task IngestScrobblesAsync(List~LastFmScrobble~ scrobbles)
            +static Task~ScrobbleSyncOrchestrator~ CreateAsync(DateTime? forceFromDate, CancellationToken ct)
        }
    }

    Artist "1" o-- "*" Album : has
    Artist "1" o-- "*" Track : has
    Album "1" o-- "*" Track : has
    MusicWork "1" o-- "*" Track : has
    MusicWork "1" o-- "*" Movement : has
    Movement "1" o-- "*" Track : has
    Track "1" o-- "*" Scrobble : has
    ScrobbleSyncOrchestrator ..> LastFmService : uses
    ScrobbleSyncOrchestrator ..> WorkService : uses
    ScrobbleSyncOrchestrator ..> PurgeService : uses
    ScrobbleSyncOrchestrator ..> TrackRepository : uses
    ScrobbleSyncOrchestrator ..> ArtistRepository : uses
    ScrobbleSyncOrchestrator ..> AlbumRepository : uses
    ScrobbleSyncOrchestrator ..> ScrobbleRepository : uses
    WorkService ..> ScriptsDbContext : uses
    PurgeService ..> ScriptsDbContext : uses
